// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngredientGrid basic isLoading snapshot render 1`] = `
<ul
  className="sc-AxhCb bjixBq spinner spinning"
>
  <li
    className="sc-AxirZ cSBHyA"
  >
    F
  </li>
  <li
    className="sc-AxjAm jylUCG"
  >
    fake_ingredient1
  </li>
  <li
    className="sc-AxjAm jylUCG"
  >
    fake_ingredient2
  </li>
</ul>
`;

exports[`IngredientGrid basic snapshot render 1`] = `
<ul
  className="sc-AxhCb bjixBq spinner"
>
  <li
    className="sc-AxirZ cSBHyA"
  >
    F
  </li>
  <li
    className="sc-AxjAm jylUCG"
  >
    fake_ingredient1
  </li>
  <li
    className="sc-AxjAm jylUCG"
  >
    fake_ingredient2
  </li>
</ul>
`;
